# immutable-container

./: .gitignore  LICENSE  NOTICE  README.md  build-app.sh  go.mod  immutableapp.imf  immutableapp.imf.ots
app/: Info.plist
cmd/demo/: main.go
cmd/imf/: add.go  anchor.go  create.go  extract.go  gui.go  gui_html.go  info.go  keygen.go  list.go  main.go  seal.go  verify.go
cmd/viewer/: main.go
docs/: IMF_Content_Provenance_1.pages  IMF_User_Manual.docx  index.html
pkg/anchor/: anchor.go
pkg/container/: container.go  container_test.go
pkg/crypto/: crypto.go  crypto_test.go
pkg/manifest/: manifest.go
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html
