[package]
name = "imf-viewer"
version = "1.1.0"
description = "IMF Viewer — Native viewer for Immutable File Containers"
authors = ["Benjamin Toso <benjamin.toso@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
